feat(#383): Refactor and enhance date range handling for activity records
Replaced static date range fetching with dynamic asset-based date filtering and streamlined related methods across services and repositories. Simplified frontend modal interactions to remove dependency on pre-fetched date ranges, aligning functionality with new backend implementation.